--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -64,17 +64,28 @@
 }
 
 .logo-wrapper {
-  position: relative;
   display: flex;
-  align-items: baseline;
-  padding-bottom: 2px;
+  flex-direction: column;
+  align-items: flex-start;
+  line-height: 1;
   font-family: 'Nb international pro webfont', Arial, sans-serif;
 }
 
 .navbar-logo-img {
-  height: 28px;
+  height: 24px;
+  /* Reduced slightly to fit label */
   width: auto;
   object-fit: contain;
+}
+
+.powered-by {
+  font-size: 9px;
+  color: #ffffff;
+  text-transform: uppercase;
+  letter-spacing: 1.2px;
+  margin-top: 5px;
+  font-weight: 700;
+  font-family: 'Inter', sans-serif;
 }
 
 /* Removed old text logo styles as they are replaced by image */
