--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Outfit:wght@500;700;800&family=Playfair+Display:ital,wght@0,400;0,700;0,800;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Montserrat:ital,wght@0,900;1,900&family=Outfit:wght@500;700;800&family=Playfair+Display:ital,wght@0,400;0,700;0,800;1,400&display=swap');
 
 :root {
   /* Colors - Orange & Black Theme */
