--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -85,6 +85,7 @@
   justify-content: flex-end;
   line-height: 1;
   margin-top: 1px;
+  transform: translateX(60px);
 }
 
 .powered-text-container {
